Moved wave sensor to the toolbox
More tools tab: Moved laser and play area to the right
Added wires to the amplitude sensor
Started support for amplitude sensor
Made the velocity sensor accessible from the toolbox
Added a velocity sensor
Added a wavelength control to the "more tools" tab
Added stub for new "more tools" tab
# 0.00.24 (49343) Mar 1, 2011
Show visible spectrum only up to 700nm for red, before it starts looking too black, see #2763
Made prisms glass instead of water by default
Fixed: sim speed slider goes too fast on my computers. The useable ranges looks like its the 1st 20% or so, should be recalibrated
# 0.00.23 (49333) Feb 28, 2011
Improved support for white background
Fixed: laser is offscreen at some aspect ratios in the prism tab
Switched to white background instead of black
# 0.00.22 (49318) Feb 28, 2011
Fixed: laser can be dragged too far into the lower medium when in wave mode
Fixed drag regions based on the new laser image
Switched to a different laser image for the prism tab
Added rotation drag handles to the prism objects
Made it so the laser only rotates in the intro tab, and rotates or translates in the prism tab based on grab region
Improved drag arrows for laser rotation and translation
Fixed laser translation and rotation
Added initial support for laser translation
Added translation drag handles to the laser
Added a protractor to the prism tab, and made it rotatable and smaller
Moved clock controls to the left (intro tab)
Fixed: allow light to move directly from prism to prism so that prisms can overlap
Made prism border color a darker shade of the prism color instead of dark gray
Added a small protractor to the prism tab
Prevent laser from going to 90 degrees when in wave mode, should go until laser bumps into edge.
Added "low" and "high" labels to the left and right of the index of refraction slider (prism tab only)
Made the toolbox vertical instead of horizontal
Added a time speed slider