@@ -7,10 +7,16 @@ package edu.colorado.phet.bendinglight.model;
 public class MediumState {
     public final String name;
     public final double index;
+    public final boolean mystery;
 
     public MediumState( String name, double index ) {
+        this( name, index, false );
+    }
+
+    public MediumState( String name, double index, boolean mystery ) {
         this.name = name;
         this.index = index;
+        this.mystery = mystery;
     }
 
     @Override
@@ -19,10 +25,6 @@ public class MediumState {
     }
 
     public boolean isCustom() {
-        return false;
-    }
-
-    public boolean isMystery() {
         return false;
     }
 }
