@@ -2,7 +2,7 @@
 package edu.colorado.phet.bendinglight.modules.prisms;
 
 import edu.colorado.phet.common.phetcommon.math.ImmutableVector2D;
-import edu.colorado.phet.common.phetcommon.util.Function1;
+import edu.colorado.phet.common.phetcommon.util.Function2;
 
 /**
  * For propagation
@@ -13,14 +13,16 @@ public class Ray {
     public final ImmutableVector2D tail;
     public final ImmutableVector2D directionUnitVector;
     public final double power;
-    public final Function1<Double, Double> indexOfRefraction;
+    public final Function2<Double, Double, Double> indexOfRefraction;
     public final double wavelength;
+    public final double mediumIndexOfRefraction;
 
-    public Ray( ImmutableVector2D tail, ImmutableVector2D directionUnitVector, double power, Function1<Double, Double> indexOfRefraction, double wavelength ) {
+    public Ray( ImmutableVector2D tail, ImmutableVector2D directionUnitVector, double power, Function2<Double, Double, Double> indexOfRefraction, double wavelength, double mediumIndexOfRefraction ) {
         this.tail = tail;
         this.power = power;
         this.indexOfRefraction = indexOfRefraction;
         this.wavelength = wavelength;
+        this.mediumIndexOfRefraction = mediumIndexOfRefraction;
         this.directionUnitVector = directionUnitVector.getNormalizedInstance();
     }
 }
